syntax = "proto3";
option java_multiple_files=true;
package ba.unsa.etf.nwt.systemevents.grpc;

import "google/protobuf/timestamp.proto";

message SystemEventRequest {
  google.protobuf.Timestamp timestamp = 1;
  string service = 2;
  string principal = 3;
  string method = 4;
  string action = 5;
  string resource = 6;
  string requestURL = 7;
  int32 status = 8;
  string response = 9;
}

message SystemEventResponse {
  string status = 1;
}

service SystemEventService {
  rpc log(SystemEventRequest) returns(SystemEventResponse);
}
